<resources>

    <string name="app_name">Strex Lead System</string>

    <!--Titles-->
    <string name="title_activity_login">Login</string>

    <!--Navigation menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_reports">Reports</string>
    <string name="action_companies">Companies</string>
    <string name="action_leads">Leads</string>
    <string name="action_filter">Filter</string>
    <string name="action_login">Login</string>


    <!--Prompts-->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <!--Errors-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_timeout">Connection time out, please check you internet connection and try again</string>

    <!--Permissions-->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_logout">Logout</string>
    <string name="menu_refresh">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_save">Save</string>

</resources>
