<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lead"
            android:icon="@drawable/ic_menu_lead"
            android:title="@string/action_leads" />
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_menu_company"
            android:title="@string/action_companies" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/action_reports" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
